Fixing the newline statement, to see if it works with the digitalBtnPressed function. hoping that it allow me to press the buttons on screen

--- a/week_5/HTML/calculator.html
+++ b/week_5/HTML/calculator.html
@@ -44,7 +44,7 @@
             
             function digitBtnPressed(button) {
 
-                if(newline) {
+                if(newline == true) {
                     document.getElementById(inputBox).value = button;
                     newline = false;
                 } else {
