Fixing the spelling error in th onlick button in line 34

--- a/week_5/HTML/calculator.html
+++ b/week_5/HTML/calculator.html
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <td colspan="2" onclick="digitBtnPressed(0)">0</td>
-                <td onlcick="btnACPressed( )">AC</td>
+                <td onclick="btnACPressed()">AC</td>
                 <td onclick="digitBtnPressed('/')">/</td>
             </tr>
             <tr>
