--- a/week_5/HTML/calculator.html
+++ b/week_5/HTML/calculator.html
@@ -70,7 +70,7 @@
             }
 
             function equalsBtnPressed() {
-                var vaue2 = parseInt(doument.getElementById("inputBox").value);
+                var vaue2 = parseInt(document.getElementById("inputBox").value);
                 var finalTotal;
 
                 switch(currentOPerator) {
