--- a/week_5/HTML/calculator.html
+++ b/week_5/HTML/calculator.html
@@ -79,6 +79,7 @@
                         break;
                     case "-":
                         finalTotal = value1 - value2;
+                        break;
                     case "x":
                         finalTotal = value1 * value2;
                         break;
