Fixing the referance to the style sheet

--- a/week_5/HTML/calculator.html
+++ b/week_5/HTML/calculator.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../CSS/Style.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
 </head>
     <body>
         <table border="1">
