Updating the contact book to allow the front end to recieve the APi

--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS/Style.css">
     <title></title>
 </head>
-<body>
+<body onload="fetchContacts()">
     <div id="table">Contacts Loading...</div>
     <button id="refresh" type="button">Refresh</button>
     <button id="addContact" type="button">Add Contact</button>
@@ -13,7 +13,16 @@
     <script src="../JS/config.js"></script>
 
     <script>
-        
+        function fetchContacts() {
+            fetch(rootPath + "controller/get-contacts/")
+            .then(function(response){
+                return response.json();
+            })
+            .then(function(data){
+                //displayOutput(data);
+                console.log(data);
+            })
+        }
     </script>
 </body>
 </html>
