--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -19,8 +19,7 @@
                 return response.json();
             })
             .then(function(data){
-                //displayOutput(data);
-                console.log(data);
+                displayOutput(data);
             })
         }
     </script>
