--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -22,6 +22,18 @@
                 displayOutput(data);
             })
         }
+
+        function displayOutput(data){
+            output = "<table>";
+
+                for(a in data){
+                    output +=
+
+                        <tr>
+                                <td><img src="${rootPath}controller/uploads/${data[a].avatar}"/></td>
+                        </tr>
+        }
+    }
     </script>
 </body>
 </html>
