Adding a backtick to the code and Adding the function that refreshes the display of contacts

--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -13,6 +13,8 @@
     <script src="../JS/config.js"></script>
 
     <script>
+
+        document.getElementById("refresh").addEventListener('click', fetchContacts);
         function fetchContacts() {
             fetch(rootPath + "controller/get-contacts/")
             .then(function(response){
@@ -27,13 +29,14 @@
             output = "<table>";
 
                 for(a in data){
-                    output +=
+                    output += `
 
                         <tr>
                                 <td><img src="${rootPath}controller/uploads/${data[a].avatar}"/></td>
                                 <td><h5>${data[a].firstname}</h5></td>
                                 <td><h5>${data[a].lastname}</h5></td>
                         </tr>
+                        `
         }
         output += "</table>"
         document.getElementById("table")
