--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../CSS/Style.css">
+    <link rel="stylesheet" type="text/css" href="#">
     <title></title>
 </head>
 <body onload="fetchContacts()">
