--- a/week_6/ContactBook/Html/add-contact.html
+++ b/week_6/ContactBook/Html/add-contact.html
@@ -8,15 +8,15 @@
 <body>
     <br/>
     <form id="editForm">
-        <label for="firstname">First Name</label>
+        <label for="firstname">First Name:</label>
         <input type="text" name="firstname" id="firstname"><br/>
-        <label for="lastname">Last Name</label>
+        <label for="lastname">Last Name:</label>
         <input type="text" name="lastname" id="lastname"><br/>
-        <label for="mobile">Mobile</label>
+        <label for="mobile">Mobile:</label>
         <input type="text" name="mobile" id="mobile"><br/>
-        <label for="email">Email</label>
+        <label for="email">Email:</label>
         <input type="text" name="email" id="email"><br/>
-        <label for="avatar">Select a file</label>
+        <label for="avatar">Select a file:</label>
         <input type="file" name="avatar" id="avatr"><br/>
         <button type="submit" id="submitForm">Submit</button>
     </form>
