Adding the submit form function to the contact book

--- a/week_6/ContactBook/Html/add-contact.html
+++ b/week_6/ContactBook/Html/add-contact.html
@@ -24,5 +24,13 @@
     <button id="homeLink" type="button">Home</button>
 
     <script src="../JS/config.js"></script>
-    <script></script>
+    <script>
+
+        function submitForm(e){
+            e.preventDefault();
+
+            const form = FormData(document.querySelector('#editForm'));
+            form.append('apiKey', apiKey);
+        }
+    </script>
 </body>
