Adding a home page link and adding event listeners for the buttons to allow the user to submit and to go to the homepage

--- a/week_6/ContactBook/Html/add-contact.html
+++ b/week_6/ContactBook/Html/add-contact.html
@@ -26,13 +26,16 @@
     <script src="../JS/config.js"></script>
     <script>
 
+        document.getElementById("submitForm").addEventListener('click', submitForm);
+        document.getElementById("homeLink").addEventListener('click', homeLink);
+        
         function submitForm(e){
             e.preventDefault();
 
             const form = FormData(document.querySelector('#editForm'));
             form.append('apiKey', apiKey);
 
-            fetch(rootPath + 'controller/insert-contact', {
+            fetch(rootPath + 'controller/insert-contact/', {
                 method: 'POST',
                 headers: {'Accept': 'application/json, *.*'},
                 body: form
@@ -43,12 +46,16 @@
             .then(function(data){
                 if(data == "1"){
                     alert("Contact added.");
-                    //link to homepage
+                    homeLink();
                 }else{
                     alert(data);
-                    //link to home page
+                    homeLink();
                 }
             })
+        }
+
+        function homeLink(){
+            windo.open("index.html", "_self");
         }
     </script>
 </body>
