Fixing a typo in line 57 from windo to window

--- a/week_6/ContactBook/Html/add-contact.html
+++ b/week_6/ContactBook/Html/add-contact.html
@@ -54,7 +54,7 @@
         }
 
         function homeLink(){
-            windo.open("index.html", "_self");
+            window.open("index.html", "_self");
         }
     </script>
 </body>
