Adding the new infront of the operator formData as the DOM object constructor cannot be called as a function

--- a/week_6/ContactBook/Html/add-contact.html
+++ b/week_6/ContactBook/Html/add-contact.html
@@ -31,7 +31,7 @@
         function submitForm(e){
             e.preventDefault();
 
-            const form = FormData(document.querySelector('#editForm'));
+            const form = new FormData(document.querySelector('#editForm'));
             form.append('apiKey', apiKey);
 
             fetch(rootPath + 'controller/insert-contact/', {
