--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -14,6 +14,7 @@
     <script>
 
         document.getElementById("refresh").addEventListener('click', fetchContacts);
+        document.getElementById("addContact").addEventListener('click', addContact);
         function fetchContacts() {
             fetch(rootPath + "controller/get-contacts/")
             .then(function(response){
@@ -39,6 +40,10 @@
         }
         output += "</table>"
         document.getElementById("table")
+    }
+
+    function addContact(){
+        window.open("add-contact.html", "_self");
     }
     </script>
 </body>
