Adding the code that allows the data to be displayed onto the wbepage in the index page
And fixing a spelling error in the add-contact page

--- a/week_6/ContactBook/Html/add-contact.html
+++ b/week_6/ContactBook/Html/add-contact.html
@@ -16,7 +16,7 @@
         <label for="email">Email:</label>
         <input type="text" name="email" id="email"><br/>
         <label for="avatar">Select a file:</label>
-        <input type="file" name="avatar" id="avatr"><br/>
+        <input type="file" name="avatar" id="avatar"><br/>
         <button type="submit" id="submitForm">Submit</button>
     </form>
     <br/>
@@ -58,3 +58,4 @@
         }
     </script>
 </body>
+</html>
