--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -39,7 +39,7 @@
                         `
         }
         output += "</table>"
-        document.getElementById("table")
+        document.getElementById("table").innerHTML = output;
     }
 
     function addContact(){
