Adding a function that fetches the contact data from the database and displays it
And adding a home function

--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-    <body>
+    <body onload="getContact()">
         <div id="avatarImage"></div>
         <form id="editForm">
             <label for="firstname">First name:</label>
@@ -29,6 +29,7 @@
 
         <script>
             var id = getId();
+            document.getElementById("homeLink").addEventListener('click', homeLink);
             console.log("The id id: " + id);
 
             function getId(){
@@ -36,6 +37,21 @@
                 var pos = url.search("=");
                 var id = url.slice(pos + 1);
                 return id;
+            }
+
+            function getContact(){
+                fetch(rootPath + 'controller/get-contacts/?id=' + id)
+                .then(function(response){
+                    return response.json();
+                })
+                .then(function(data){
+                    //display contact info
+                    console.log(data);
+                })
+            }
+
+            function homeLink(){
+                window.open("index.hmtl", "_self");
             }
 
         </script>
