Fixing the spelling error in the code from hmtl to html

--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -51,7 +51,7 @@
             }
 
             function homeLink(){
-                window.open("index.hmtl", "_self");
+                window.open("index.html", "_self");
             }
 
         </script>
