Adding the display output function that allows the image and data elements to be displayed on the webpage

--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -54,6 +54,17 @@
                 window.open("index.html", "_self");
             }
 
+            function displayOutput(data){
+                avatarImg = `
+                <img src="${rootPath}/controller/uploads/${data[0].avatar}"
+                `
+                document.getElementById("avatarImage").innerHTML = avatarImg;
+                document.getElementById("firstname").value = data[0].firstname;
+                document.getElementById("lastname").value = data[0].lastname;
+                document.getElelmentById("mobile").value = data[0].mobile;
+                document.getElementById("email").value = data[0].email;
+             }
+
         </script>
     </body>
 </html>
