Adding the displayoutput function to the getcontact function

--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -45,7 +45,7 @@
                     return response.json();
                 })
                 .then(function(data){
-                    //display contact info
+                    displayOutput(data)
                     console.log(data);
                 })
             }
