Fixing a spelling error in line 64

--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -61,7 +61,7 @@
                 document.getElementById("avatarImage").innerHTML = avatarImg;
                 document.getElementById("firstname").value = data[0].firstname;
                 document.getElementById("lastname").value = data[0].lastname;
-                document.getElelmentById("mobile").value = data[0].mobile;
+                document.getElementById("mobile").value = data[0].mobile;
                 document.getElementById("email").value = data[0].email;
              }
 
