--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -30,6 +30,7 @@
         <script>
             var id = getId();
             document.getElementById("homeLink").addEventListener('click', homeLink);
+            document.getElementById("editContact").addEventListener('click', editContact);
             console.log("The id id :" + id);
 
             function getId(){
@@ -63,6 +64,15 @@
                 document.getElementById("lastname").value = data[0].lastname;
                 document.getElementById("mobile").value = data[0].mobile;
                 document.getElementById("email").value = data[0].email;
+             }
+
+             function editContact(){
+                document.getElementById("firstname").readOnly = false;
+                document.getElementById("lastname").readOnly = false;
+                doucment.getElementById("mobile").readOnly = fasle;
+                document.getElementById("email").readOnly = false;
+                document.getElementById("avatar").hidden = false;
+                document.getElementById("submitForm").hidden = false;
              }
 
         </script>
