Adding a function that allows the submit button to work

--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -76,7 +76,14 @@
                 document.getElementById("submitForm").hidden = false;
                 document.getElementById("avatarLabel").hidden = false;
             }        
+            
+            function submitForm(e){
+                e.preventDefault();
 
+                const form = new FormData(documet.querySelector("#editForm"));
+                form.append('apiKey', apiKey);
+                form.append('id', id);
+            }
 
         </script>
     </body>
