--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -83,6 +83,24 @@
                 const form = new FormData(documet.querySelector("#editForm"));
                 form.append('apiKey', apiKey);
                 form.append('id', id);
+
+                fetch(rootPath + 'controller/edit-contact/', {
+                    method: 'POST',
+                    headers: {'Accept': 'application/json, *.*'},
+                    body: form
+                })
+                .then(function(response){
+                    return response.text();
+                })
+                .then(function(data){
+                    if(data == "1"){
+                        alert("Contact eited.");
+                        homeLink();
+                    }else{
+                        alert(data);
+                        homeLink;
+                    }
+                })
             }
 
         </script>
