--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -32,6 +32,7 @@
             document.getElementById("homeLink").addEventListener('click', homeLink);
             document.getElementById("editContact").addEventListener('click', editContact);
             document.getElementById("editForm").addEventListener("submit", submitForm);
+            document.getElementById("deleteContact").addEventListener('click', deletContact);
             console.log("The id id :" + id);
 
             function getId(){
@@ -102,6 +103,24 @@
                         homeLink();
                     }
                 })
+            }
+
+            function deleteContact(){
+                var confirmDelete = confirm("Delete contact. Are you sure?");
+
+                if(confirmDelete == true){
+                    fetch(rootPath + 'controller/delete-contact/?id=' + id)
+                    .then(function(response){
+                        return response.text();
+                    })
+                    .then(function(data){
+                        if(data == "1"){
+                            homeLink();
+                        } else {
+                            alert(data);
+                        }
+                    })
+                }
             }
 
         </script>
