Adding a title to all the files and adding code in Css for styling

--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>My Contact Book</title>
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
 </head>
 <body onload="fetchContacts()">
     <div id="table">Contacts Loading...</div>
@@ -47,7 +48,7 @@
     }
 
     function editContact(id){
-        window.open("edit-contact.html?id=" + id, "_self");
+        window.open("edit-contact.html?id=" + id, "_self");s
     }
     </script>
 </body>
