--- a/week_6/ContactBook/Html/add-contact.html
+++ b/week_6/ContactBook/Html/add-contact.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>My ContactBook</title>
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
 </head>
 <body>
     <br/>
