--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+    <title>eEdit Contact</title>
 </head>
     <body onload="getContact()">
         <div id="avatarImage"></div>
