--- a/week_6/ContactBook/Html/index.html
+++ b/week_6/ContactBook/Html/index.html
@@ -10,6 +10,10 @@
     <button id="refresh" type="button">Refresh</button>
     <button id="addContact" type="button">Add Contact</button>
 
+    <heading>
+        <h1>My Contact Book</h1>
+    </heading>
+
     <script src="../JS/config.js"></script>
 
     <script>
