Updating the shopping cart, edit contact and sets

--- a/week_6/ContactBook/Html/edit-contact.html
+++ b/week_6/ContactBook/Html/edit-contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../CSS/style.css">
-    <title>eEdit Contact</title>
+    <title>My Contact Book</title>
 </head>
     <body onload="getContact()">
         <div id="avatarImage"></div>
